<resources>
    <string name="app_name">Thymbol</string>
    <string name="best_places_to_visit">Best Places To Visit In</string>
    <string name="searching">Searching…</string>
    <string name="ERROR">ERROR</string>
    <string name="loading">Loading…</string>
    <string name="Reviews">Reviews</string>
    <string name="choose_one">choose one</string>
    <string name="unabletofindmarket">\" unable to find market app\"</string>
    <string name="future">in the future</string>
    <string name="momentsago">moments ago</string>
    <string name="aminuteago">a minute ago</string>
    <string name="minutesago">\" minutes ago\"</string>
    <string name="anhourago">an hour ago</string>
    <string name="hoursago">\" hours ago\"</string>
    <string name="yesterday">yesterday</string>
    <string name="daysago">\" days ago\"</string>
    <string name="logout">Logout</string>
    <string name="areyousureyouwantologout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="VERIFYYOUREMAIL">VERIFY YOUR EMAIL</string>
    <string name="wehavesentverification">We have sent verification link on your mail address.</string>
    <string name="usernotfound">User Not Found</string>
    <string name="youraccountisnotavailable">Your account is not available. Please create your account.</string>
    <string name="free">FREE</string>
    <string name="OFF">% OFF</string>
    <string name="Get">Get</string>
    <string name="Discount">Discount -</string>
    <string name="Validuntil">Valid until</string>
    <string name="voucherredeemed">Voucher Redeem</string>
    <string name="enteremail">Enter Email Address</string>
    <string name="wait">Wait…</string>
    <string name="resetpassword">RESET PASSWORD</string>
    <string name="wehavesentreset">We have sent reset password link on your mail address.</string>
    <string name="enterpassword">Enter Password</string>
    <string name="signin">Sign In…</string>
    <string name="enterfullname">Enter Full Name</string>
    <string name="creatingaccount">Creating Account…</string>
    <string name="generatingvoucher">Generating Voucher…</string>
    <string name="no_vouchers_available">No vouchers available</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications_available">No notifications available</string>
    <string name="search">Search</string>
    <string name="no_stores_available">No stores available</string>
    <string name="my_voucher">My Voucher</string>
    <string name="shop_name">Shop Name</string>
    <string name="offer">Offer</string>
    <string name="type">Type</string>
    <string name="validity">Validity</string>
    <string name="address">Address</string>
    <string name="view_on_map">View On Map</string>
    <string name="voucher_number">Voucher Number</string>
    <string name="conditions">Conditions</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="account_log_in">Account Log In</string>
    <string name="login_with_google">Login With Google</string>
    <string name="sign_in_with_apple">Sign In With Apple</string>
    <string name="or_login_using_email">Or Login Using Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">RESET</string>
    <string name="continues">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="join_the_event">JOIN THE EVENT</string>
    <string name="create_an_account">Create An Account</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="thank_you_for_being_our_customer">Thank you for being our customer.</string>
    <string name="location">Location</string>
    <string name="redeem_coupon_code">Redeem Coupon Code</string>
    <string name="around_me">AROUND ME</string>
    <string name="enter_your_keywords">Enter your keywords</string>
    <string name="search_by_name_and_location">Search by name and location</string>
    <string name="find_you_next_discount">FIND YOU NEXT DISCOUNT</string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="upcoming">Upcoming</string>
    <string name="expired">Expired</string>
    <string name="settings">Settings</string>
    <string name="notification_center">Notification Center</string>
    <string name="support">Support</string>
    <string name="help_center">Help Center</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="video_review"><u>Video Review</u></string>
</resources>
