<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:background="@color/main_color"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topImage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sfproregular2"
        android:text="@string/join_the_event"
        android:textColor="@color/white"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/account_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeBack"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/create_an_account"
        android:fontFamily="@font/sfprobold2"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/account_log_in"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_back"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/sfpromedium2"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fullName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_back"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/sfpromedium2"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/emailaddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_back"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/sfpromedium2"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_back"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/sfpromedium2"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/sfproregular2"
            />
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:fontFamily="@font/sfprobold2"
            />
    </LinearLayout>
</RelativeLayout>
