<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:background="@color/main_color"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topImage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_back"
        android:fontFamily="@font/sfproregular2"
        android:textColor="@color/white"
        android:textSize="13sp"
        />
    <TextView
       android:id="@+id/account_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeBack"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/account_log_in"
        android:fontFamily="@font/sfprobold2"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/loginLL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/account_log_in"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <LinearLayout
            android:id="@+id/googleSignIn"
            android:layout_marginEnd="5dp"
            android:background="@drawable/btn_back"
            android:backgroundTint="#080F2D52"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/google"
                android:layout_marginEnd="4dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_google"
                android:textColor="@color/white"
                android:fontFamily="@font/sfproregular2"
                android:textSize="11sp"
                android:layout_marginStart="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/apple"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_back"
            android:backgroundTint="#080F2D52"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/apple"
                android:layout_marginEnd="4dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_apple"
                android:textColor="@color/white"
                android:fontFamily="@font/sfproregular2"
                android:textSize="11sp"
                android:layout_marginStart="4dp"
                />
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/orLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sfproregular2"
        android:text="@string/or_login_using_email"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/orLogin"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_back"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/sfpromedium2"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="13sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/emailaddress"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_back"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_password"
        android:fontFamily="@font/sfpromedium2"
        android:textSize="13sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        />
    <LinearLayout
        android:id="@+id/forgotLL"
        android:layout_below="@+id/password"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/sfproregular2"
            />
        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:fontFamily="@font/sfprobold2"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/forgotLL"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_back"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/sfpromedium2"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/sfproregular2"
            />
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="3dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:fontFamily="@font/sfprobold2"
            />
    </LinearLayout>
</RelativeLayout>
