<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.MyVoucherFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/my_vouchers"
            android:fontFamily="@font/sfprobold"
            android:textSize="22sp"
            android:textColor="@color/black"
            />

        <LinearLayout

            android:backgroundTint="@color/white"
            android:background="@drawable/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="2dp"
            android:layout_marginBottom="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginStart="20sp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/upcomingBtn"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/activebtn"

                android:fontFamily="@font/sfpromedium2"
                android:text="@string/upcoming"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/expiredBtn"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/inactivebtn"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:text="@string/expired"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:fontFamily="@font/sfpromedium2"
                />
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/no_featured_location_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/sfproregular2"
        android:text="@string/no_vouchers_available" />

</RelativeLayout>
