<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ProfileFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/headerRR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profilePic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_placeholder"
            app:riv_corner_radius="16dp" />

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/profilePic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpromedium2"
                android:text="SOFTMENT"
                android:textColor="@color/app_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/sfproregular2"
                android:text="support@softment.in"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logoutRR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerRR">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sfprobold2"
            android:text="@string/settings"
            android:textColor="@color/app_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sfpromedium2"
            android:text="@string/logout"
            android:textColor="#007AFF"
            android:textSize="13sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logoutRR"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sfproregular2"
                android:text="@string/notification_center"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#A8919191"

                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sfprobold2"
            android:text="@string/support"
            android:textColor="@color/app_black"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/help_cener"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sfproregular2"
                android:text="@string/help_center"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#A8919191"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rateApp"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sfproregular2"
                android:text="@string/rate_app"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#A8919191"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shareApp"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sfproregular2"
                android:text="@string/share_app"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#A8919191"

                />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/sfprobold2"
            android:text="@string/about"
            android:textColor="@color/app_black"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sfproregular2"
                android:text="@string/version"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/sfproregular2"
                android:text="1.0"
                android:textSize="12sp" />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#A8919191"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sfproregular2"
                android:text="@string/privacy_policy"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#A8919191"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/termsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sfproregular2"
                android:text="@string/terms_amp_conditions"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/right" />


        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
</ScrollView>
